# SourceBridge

./: .gitignore  DevelopmentGuidelines.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
doc/design/: v0.1.md  v0.2.md
doc/plan/: 000_project_init.md  001_5_app_shell.md  001_database_infra.md  001_folder_scan_import.md  002_ai_refactor_dashboard_plan.md  002_gemini_cli_integration.md  002_i18n_optimization.md  002_repo_management.md  003_route_module.md  003_sidebar_filter.md  004_repo_git_branch.md  004_task_orchestrator.md  005_diff_engine.md  005_repo_extra_ops.md  006_route_test_polish.md  006_sync_polish.md  007_cli_mode.md  007_route_preview_diff.md  (+1 more)
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  diff.rs  git_ops.rs  mod.rs  repo.rs  repo_scan.rs  report.rs  route.rs  settings.rs  status.rs  task.rs  terminal.rs  workspace.rs
src-tauri/src/core/: ai_service.rs  dependency_scanner.rs  diff.rs  mod.rs  orchestrator.rs  scheduler.rs  sync.rs
src-tauri/src/core/system/: ide.rs
src-tauri/src/database/: manager.rs  mod.rs
src-tauri/src/database/entities/: mod.rs  repo_groups.rs  repositories.rs  route_groups.rs  routes.rs  settings.rs  task_execution_logs.rs  task_steps.rs  tasks.rs  workspace_config.rs
verification/: verify_app_shell.py  verify_diff.py  verify_repos.py  verify_routes.py  verify_sync.py
(+101 files in other folders)
